assets/css/style.css
:root {
    --olive: #BBBE64;
    --blue: #277CB3;
    --brown: #663B04;
    --khaki: #BCAA99;
    --lilac: #AB94A8;
}

.hero {
    background-image: url("../images/beautiful_morning-wallpaper-2048x1152.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

p {
    color: var(--blue)
}

.title {
    color:darkolivegreen;
    font-weight: bold;
}

.subtitle {
    color: darkolivegreen;
    font-style: italic;
}

.ticketmaster {
    height: 247px;
    width: 620px;
    border-radius: 10px;
    border-width: 0px;
    margin-top: 5vh;
    margin-left: 5vw;
}

.hero {
    background-image: url("../images/beautiful_morning-wallpaper-2048x1152.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.tile.is-ancestor {
    margin-top: 7px;
    margin-left: 0px;
    margin-right: 7px;
    justify-content: flex-end;
}

#container {
    background-image: url("../images/pexels-lorenzo-241544.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    color: var(--olive);
    display: block;
    border-radius: 10px;
}

#container p {
    color:var(--olive)
}

#container span {
    color: var(--brown);
}

.columns.is-link.is-multiline {
    display: inline-block;
    vertical-align: top;
    width: 48%;
    padding: 10px;
}

p {
    font-weight: bold;
}

h2 {
    font-weight: bold;
    font-size: xx-large;
}

p span {
    font-weight: normal;
    font-size: larger;
}

.card-content {
    background: var(--khaki);
}

.quote-header {
    text-align: center;
}

#content {
    text-align: center;
    font-family: 'Bebas Neue', 'Roboto Mono', 'SF Mono', 'Fira Code', 'Fira Mono', monospace;
    font-size: 30px;
    color: var(--blue)
}

#name {
    text-align: center;
    font-family: 'Dancing Script', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', monospace;
    font-size: 20px;
}

.notification {
    background-color: var(--brown);
}

body {
    background-color: var(--khaki);
}

